Implemented both ItemBased and MatrixFactorization recommendation strategies. Added logic to use different strategy based on user order count. Similarity based approach.