@@ -14,7 +14,6 @@ import org.springframework.stereotype.Component;
 import java.util.*;
 import java.util.stream.Collectors;
 
-
 @Component("userBasedCF")
 @RequiredArgsConstructor
 public class UserBasedCFStrategy implements RecommendationStrategy {
@@ -25,16 +24,29 @@ public class UserBasedCFStrategy implements RecommendationStrategy {
 
     @Override
     public List<ProductDto> getRecommendations(User user, int numRecommendations) {
+        // Get the products the user has ordered
         Set<Product> userProducts = getUserProducts(user);
-        List<User> similarUsers = findSimilarUsers(user, userProducts);
-        Set<Product> recommendedProducts = getSimilarUsersProducts(similarUsers, userProducts);
 
-        return recommendedProducts.stream()
-                .map(productService::convertToDto)
+        // Find similar users and their similarity scores
+        Map<User, Double> similarUsers = findSimilarUsers(user, userProducts);
+
+        // Get products ordered by similar users that the current user hasn't ordered
+        Map<Product, Double> recommendedProducts = getSimilarUsersProducts(similarUsers, userProducts);
+
+        // Convert to DTOs, sort by similarity score, and limit to the requested number of recommendations
+        return recommendedProducts.entrySet().stream()
+                .sorted(Map.Entry.<Product, Double>comparingByValue().reversed())
                 .limit(numRecommendations)
+                .map(entry -> {
+                    ProductDto dto = productService.convertToDto(entry.getKey());
+                    return dto;
+                })
                 .collect(Collectors.toList());
     }
 
+    /**
+     * Retrieves all products that the user has ordered.
+     */
     private Set<Product> getUserProducts(User user) {
         return orderRepository.findByUserId(user.getId()).stream()
                 .flatMap(order -> order.getOrderItems().stream())
@@ -42,22 +54,61 @@ public class UserBasedCFStrategy implements RecommendationStrategy {
                 .collect(Collectors.toSet());
     }
 
-    private List<User> findSimilarUsers(User user, Set<Product> userProducts) {
-        return orderRepository.findAll().stream()
-                .filter(order -> !order.getUser().equals(user))
-                .filter(order -> order.getOrderItems().stream()
-                        .anyMatch(item -> userProducts.contains(item.getProduct())))
+    /**
+     * Finds users who have ordered at least one product in common with the given user.
+     * Returns a map of similar users and their similarity scores.
+     */
+    private Map<User, Double> findSimilarUsers(User user, Set<Product> userProducts) {
+        List<User> allUsers = orderRepository.findAll().stream()
                 .map(Order::getUser)
+                .filter(u -> !u.equals(user))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
+
+        Map<User, Double> similarUsers = new HashMap<>();
+        for (User otherUser : allUsers) {
+            Set<Product> otherUserProducts = getUserProducts(otherUser);
+            double similarity = calculateJaccardSimilarity(userProducts, otherUserProducts);
+            if (similarity > 0) {
+                similarUsers.put(otherUser, similarity);
+            }
+        }
+
+        return similarUsers;
     }
 
-    private Set<Product> getSimilarUsersProducts(List<User> similarUsers, Set<Product> userProducts) {
-        return similarUsers.stream()
-                .flatMap(u -> orderRepository.findByUserId(u.getId()).stream())
-                .flatMap(order -> order.getOrderItems().stream())
-                .map(OrderItem::getProduct)
-                .filter(product -> !userProducts.contains(product))
-                .collect(Collectors.toSet());
+    /**
+     * Calculates the Jaccard similarity between two sets of products.
+     */
+    private double calculateJaccardSimilarity(Set<Product> set1, Set<Product> set2) {
+        Set<Product> intersection = new HashSet<>(set1);
+        intersection.retainAll(set2);
+
+        Set<Product> union = new HashSet<>(set1);
+        union.addAll(set2);
+
+        return (double) intersection.size() / union.size();
+    }
+
+    /**
+     * Gets products ordered by similar users that the current user hasn't ordered yet.
+     * Returns a map of products and their weighted similarity scores.
+     */
+    private Map<Product, Double> getSimilarUsersProducts(Map<User, Double> similarUsers, Set<Product> userProducts) {
+        Map<Product, Double> recommendedProducts = new HashMap<>();
+
+        for (Map.Entry<User, Double> entry : similarUsers.entrySet()) {
+            User similarUser = entry.getKey();
+            Double similarity = entry.getValue();
+
+            Set<Product> similarUserProducts = getUserProducts(similarUser);
+            for (Product product : similarUserProducts) {
+                if (!userProducts.contains(product)) {
+                    recommendedProducts.merge(product, similarity, Double::sum);
+                }
+            }
+        }
+
+        return recommendedProducts;
     }
 }
